Added community links

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
             <li>can't speak Japanese</li>
             <li>want more and wished there was an easy way to find other translators</li>
         </ul>
+
+        <h3>Community:</h3>
+        <ul>
+            <li>Reddit: <a href="https://www.reddit.com/r/Hololive">r/Hololive</a></li>
+            <li>Discord: <a href="https://discord.com/invite/w2Q7AN9">Hololive Resistance</a></li>
+            <li>Discord: <a href="https://discord.gg/holofans">Hololive Fan Server</a> <small>(invite enabled every other week)</small></li>
+        </ul>
     </div>
 
     <script src="/assets/channels.js"></script>
